--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-    <base href="/">
-    <meta charset="UTF-8">
-    <title>Vue 2 Webpack 4 Boilerplate</title>
-</head>
-<body>
-<div class="wrapper" id="app"></div>
-</body>
+    <head>
+        <base href="/">
+        <meta charset="UTF-8">
+        <title>Crypto Wallet</title>
+    </head>
+    <body>
+        <div class="wrapper" id="app"></div>
+    </body>
 </html>
