--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
     <head>
         <base href="/">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>Crypto Wallet</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <div class="wrapper" id="app"></div>
