--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 
         <title>Crypto Wallet</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Muli" />
+
     </head>
     <body>
         <div class="wrapper" id="app"></div>
