--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <title>Crypto Wallet</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Muli" />
+        <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     </head>
     <body>
